--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   </head>
   <body>
     <h1>AGATHA CHRISTIE</h1>
-    <h2>The best-selling author of all time</h2>
+    <h2>The best-selling author of all times</h2>
+
+    <footer>
+      This project was coded by Antonella Alares and is
+      <a
+        href="https://github.com/antonellaOvO/agatha-christie-project.git"
+        target="_blank"
+        >open-sourced</a
+      >
+    </footer>
   </body>
 </html>
