Added hero and making it responsive

--- a/index.html
+++ b/index.html
@@ -13,16 +13,25 @@
     <title>About Agatha Christie</title>
   </head>
   <body>
-    <h1>AGATHA CHRISTIE</h1>
-    <h2>The best-selling author of all times</h2>
+    <div class="container">
+      <header>
+        <h3>·The mysteries of·</h3>
+        <h1>AGATHA CHRISTIE</h1>
+        <h2>The best-selling author of all times</h2>
 
-    <footer>
-      This project was coded by Antonella Alares and is
-      <a
-        href="https://github.com/antonellaOvO/agatha-christie-project.git"
-        target="_blank"
-        >open-sourced</a
-      >
-    </footer>
+        <a href="#biography">LEARN MORE</a>
+      </header>
+
+      <h4 id="biography">WHO WAS AGATHA CHRISTIE?</h4>
+
+      <footer>
+        This project was coded by Antonella Alares and is
+        <a
+          href="https://github.com/antonellaOvO/agatha-christie-project.git"
+          target="_blank"
+          >open-sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
