--- a/index.html
+++ b/index.html
@@ -25,12 +25,59 @@
       <h4 id="biography">WHO WAS AGATHA CHRISTIE?</h4>
 
       <footer>
-        This project was coded by Antonella Alares and is
-        <a
-          href="https://github.com/antonellaOvO/agatha-christie-project.git"
-          target="_blank"
-          >open-sourced</a
-        >
+        <section class="grid">
+          <div class="">
+            <h3>More about Agatha Christie</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://www.agathachristie.com/en/about-christie"
+                  target="_blank"
+                  >Biography</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://speechify.com/audiobooks/blog/read-agatha-christie-books-in-order/"
+                  target="_blank"
+                  >List of books</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://wanderwomenproject.com/es/lugares/galeria-agatha-christie-en-el-museo-de-torquay/"
+                  target="_blank"
+                  >Museum of Agatha Christie</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="">
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Antonella and I'm from Barcelona. I'm very fond of
+              the city. I created this page as part of a project for SheCodes
+              Responsive to develop my coding skills.
+            </p>
+          </div>
+
+          <div class="">
+            <h3>About this website</h3>
+            <p>I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+            </br>
+            This project was coded by Antonella Alares and is
+              <a
+                class="open-sourced"
+                href="https://github.com/antonellaOvO/agatha-christie-project.git"
+                target="_blank"
+                >open-sourced</a
+              >
+              
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
