added first section

--- a/index.html
+++ b/index.html
@@ -22,10 +22,25 @@
         <a href="#biography">LEARN MORE</a>
       </header>
 
-      <h4 id="biography">WHO WAS AGATHA CHRISTIE?</h4>
+      <main>
+        <section class="grid grid-2-columns">
+        <div>
+        <img class="img-responsive" src="images/agatha-image.jpg" alt="Photo of Agatha Christie">
+        </div>
+        <div>
+         <h2 id="biography">WHO WAS AGATHA CHRISTIE?</h2>
+          <h3>Agatha, the lady of mystery</h3>
+          <p>The queen of crime, Agatha Christie is possibly the most famous writer of detective novels and a reference in world literature, with her famous detective Poirot (without ever forgetting her other creation, Miss Marple). Since she was little she already had a great imagination. She had always developed great creativity, and often played with characters she invented herself. 
+          </p>
+          <p>
+            As a young woman she also traveled to Egypt, where she became fascinated by all oriental culture (you have the evidence in some novels "Death on the Nile", "Appointment with Death" or "Murder in Mesopotamia"). But, without a doubt, one of the greatest influences she had on her childhood was her work as a nurse. In this work she learned all the secrets of toxicology. In short, Agatha Christie applied this knowledge many times in his novels, in numerous murders.
+          </p>
+        </div>
+        </section>
+      </main>
 
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-first-narrow">
           <div class="">
             <h3>More about Agatha Christie</h3>
             <ul>
