--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <div class="grid grid-3-columns">
 
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
             <img class="img-responsive" src="images/book-1.jpg" alt="The mysterious Mr. Quin">
-    <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/tH1YJaW38ew?si=lOPGthZogn3FP1ji" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
+            <iframe class="embed" src="https://www.youtube.com/embed/tH1YJaW38ew?si=lOPGthZogn3FP1ji" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
             <div class="card-body">
@@ -83,9 +83,9 @@
           </div>
 
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
             <img class="img-responsive" src="images/book-2.jpg" alt="Partners in crime">
-    <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/p9grnJrhgHg?si=KANapDbnYk_2yYe8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
+            <iframe class="embed" src="https://www.youtube.com/embed/p9grnJrhgHg?si=KANapDbnYk_2yYe8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
             <div class="card-body">
@@ -118,9 +118,9 @@
           </div>
 
           <div class="card">
-            <div class="card-header">
+            <div class="card-header grid grid-2-columns">
             <img class="img-responsive" src="images/book-3.jpg" alt="Crooked house">
-    <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/EAfSN4MaOvo?si=A00tPJin7f38rEyQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>-->
+            <iframe class="embed" src="https://www.youtube.com/embed/EAfSN4MaOvo?si=A00tPJin7f38rEyQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
             <div class="card-body">
