--- a/index.html
+++ b/index.html
@@ -153,9 +153,21 @@
             </div>
 
           </div>
+          </div>
+        </section>
 
-
-
+        <section class="third">
+          <h2 class="text-center">TRAILERS</h2>
+          <h3 class="text-center">Films and Series</H3>
+            <div class="films-embed">
+          <div class="grid grid-3-columns">
+            <iframe class="embed" src="https://www.youtube.com/embed/Dw0lGUB6pYM?si=wR66CEfGa08mPWBX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="embed" src="https://www.youtube.com/embed/8rDSNChX5lo?si=j3ZnLcrnUoFXzisD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="embed" src="https://www.youtube.com/embed/ERj3KafjfRk?si=_NTtfuxBSf2ygqZ-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="embed" src="https://www.youtube.com/embed/Mq4m3yAoW8E?si=ZXtwnL6NbQi9WvQQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="embed" src="https://www.youtube.com/embed/dZRqB0JLizw?si=t1hxSXtbRepdmXKd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="embed" src="https://www.youtube.com/embed/yEddsSwweyE?si=yPTkF58Ay3B8lQBM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
           </div>
         </section>
       </main>
