Added table html-timeline

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <section class="grid grid-2-columns">
         <div>
         <img class="img-responsive" src="images/agatha-image.jpg" alt="Photo of Agatha Christie">
+
+        
         </div>
         <div>
          <h2 id="biography">WHO WAS AGATHA CHRISTIE?</h2>
@@ -38,6 +40,76 @@
         </p>
         </div>
         </section>
+
+        <div class="table-container">
+        <table>
+          <thead>
+
+            <tr>
+              <th>
+                1890
+              </th>
+              <th>
+                1914
+              </th>
+              <th>
+                1917
+              </th>
+              <th>
+                1926
+              </th>
+              <th>
+                1928
+              </th>
+              <th>
+                1930
+              </th>
+              <th>
+                1933
+              </th>
+              <th>
+                1956
+              </th>
+              <th>
+                1976
+              </th>
+              
+            </tr>
+          </thead>
+
+            <tbody>
+              <tr>
+                <td>
+                  Born on Torquay (England)
+                </td>
+                <td>
+                  Marries Archibald Christie
+                </td>
+                <td>
+                  First Novel "The Mysterious Affair at Styles"
+                </td>
+                <td>
+                  Disappears for 10 days
+                </td>
+                <td>
+                  Divorce - Travel on Orient Express to Istanbul and from there to Baghdad
+                </td>
+                <td>
+                  Marries Max Mallowan
+                </td>
+                <td>
+                  Tour of Egipt. Inspires her novel "Death on the Nile"
+                </td>
+                <td>
+                  Named Dame Commander of the most excellent Order of the British Empire
+                </td>
+                <td>
+                  Died
+                </td>
+              </tr>
+            </tbody>
+        </table>
+        </div>
 
         <section class="secondary">
           <h2 class="text-center">BOOKS</h2>
